Fix server test